--- a/index.html
+++ b/index.html
@@ -133,14 +133,14 @@
     <div class="container mx-auto p-4 md:p-8">
         <!-- Header Section -->
         <header class="text-center mb-8">
-            <h1 class="text-4xl font-bold text-slate-900">Sports Scout Analytics Dashboard</h1>
+            <h1 class="text-4xl font-bold text-slate-900">Soccer Scouting Analytics Dashboard</h1>
             <p class="mt-2 text-lg text-slate-600">Analyze player performance with interactive charts and AI insights.</p>
         </header>
 
         <main id="dashboard-main-content">
             <!-- Introduction & How-to Section -->
             <section id="intro-how-to" class="max-w-4xl mx-auto bg-white p-6 rounded-xl shadow-md mb-8">
-                <h2 class="text-2xl font-bold text-slate-900 mb-4">Welcome to the Sports Scout Analytics Dashboard!</h2>
+                <h2 class="text-2xl font-bold text-slate-900 mb-4">Welcome to the Soccer Scouting Analytics Dashboard!</h2>
                 <p class="text-slate-700 mb-4">
                     This interactive dashboard is designed to help you analyze soccer player performance data efficiently.
                     By uploading your CSV or Excel files, you can gain deep insights into individual players  and compare them against peers.
